# Genetic-algorithm---Knapsack-problem

./: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CKnapsackProblem.cpp  CKnapsackProblem.h  CMakeLists.txt  README.md  main.cpp
Menus/: CCommand.cpp  CCommand.h  CMenu.cpp  CMenuCommand.cpp  CMenuCommand.h  CrossProb.cpp  CrossProb.h  KnapsackList.cpp  KnapsackList.h  LoopGenetic.cpp  LoopGenetic.h  MutProb.cpp  MutProb.h  PopSize.cpp  PopSize.h  TimeGenetic.cpp  TimeGenetic.h
