cmake_minimum_required(VERSION 3.12)
project(untitled4)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled4 main.cpp CKnapsackProblem.cpp CKnapsackProblem.h CGeneticAlgorithm.cpp CGeneticAlgorithm.h CIndividual.cpp CIndividual.h Menus/KnapsackList.cpp Menus/KnapsackList.h Menus/LoopGenetic.cpp Menus/LoopGenetic.h Menus/TimeGenetic.cpp Menus/TimeGenetic.h Menus/CCommand.cpp Menus/CCommand.h Menus/CMenuCommand.cpp Menus/CMenuCommand.h Menus/CMenu.h Menus/CMenu.cpp Menus/CMenuItem.h Menus/CMenuItem.cpp Menus/MutProb.cpp Menus/MutProb.h Menus/CrossProb.cpp Menus/CrossProb.h Menus/PopSize.cpp Menus/PopSize.h)